# OS-defaults_research

./: .gitignore  Convert-BinaryToString.ps1  DB_design.xlsx  OS_defaults.db  README.md  Win10_Pro-Default_files_directories.xlsx  Win10_Pro-System32_Syswow64-comparison.xlsx  build_db.sql  git  import_os_defaults.py  nix-harvest_dir_file_metadata.py  res.txt  win-harvest_dir_file_metadata.ps1
fmd/: Cargo.toml
fmd/src/: lib.rs
retired/: Win10_Pro-System32_Syswow64-comparison.xlsx  import_os_defaults.py
