[package]
name = "fmd"
version = "0.1.0"
authors = ["theflakes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="fmd"
crate-type = ["cdylib"]

[dependencies]
fuzzyhash = "*"
tree_magic = "*"
libc = "*"

[profile.release]
lto = true
panic = 'abort'
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
